# math-converter

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp  userguide.md
config/: settings.conf
icon/: icon.rc  math-converter-icon.xcf
include/: CMakeLists.txt  CharacterSet.cpp  CharacterSet.hpp  CharacterStream.cpp  CharacterStream.hpp  Definitions.hpp  ForwardDeclarations.hpp  Lexer.cpp  Lexer.hpp  MconHelpers.cpp  MconHelpers.hpp  Settings.cpp  Settings.hpp  Token.cpp  Token.hpp  Version.cpp  Version.hpp  definitions.hpp  libfakekey.c  libfakekey.h
include/parsing/: CMakeLists.txt  Generator.cpp  Generator.hpp  Parser.cpp  Parser.hpp
include/parsing/latex/: CMakeLists.txt  LatexGenerator.cpp  LatexGenerator.hpp  LatexParser.cpp  LatexParser.hpp
include/parsing/mathcad/: CMakeLists.txt  MathcadGenerator.cpp  MathcadGenerator.hpp  MathcadParser.cpp  MathcadParser.hpp
include/parsing/mathml/: CMakeLists.txt  MathMLGenerator.cpp  MathMLGenerator.hpp
include/parsing/unicodemath/: CMakeLists.txt  UnicodeMathGenerator.cpp  UnicodeMathGenerator.hpp
old/: Mathcad2LaTeX.ahk  old.md  readme.txt
resources/character-sets/: danish.json  default.json  greek.json  special.json
resources/math-languages/: node-definitions.json
