add_subdirectory(intermediate)
add_subdirectory(mathcad)
add_subdirectory(latex)

add_library(Parser Parser.cpp)
target_link_libraries(Parser Lexer)
target_link_libraries(Parser Node)
target_link_libraries(Parser ParsingTree)
target_link_libraries(Parser MathcadParser)
target_link_libraries(Parser LatexParser)

add_library(Generator Generator.cpp)
target_link_libraries(Generator Lexer)
target_link_libraries(Generator Node)
target_link_libraries(Generator ParsingTree)
target_link_libraries(Generator MathcadGenerator)
target_link_libraries(Generator LatexGenerator)